Category has to be set

--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post/post.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post/post.component.html
@@ -48,11 +48,11 @@
         <mat-option value="coffeeshop">Coffeeshop</mat-option>
         <mat-option value="sightseeing">Sightseeing</mat-option>
         <mat-option value="shopping">Shopping</mat-option>
-        <mat-option value="bern">Bern</mat-option>
         <mat-option value="museum">Museum</mat-option>
       </mat-select>
 
-    </mat-form-field><span id="setTitle" style="visibility: hidden">Please set a title</span>
+    </mat-form-field><span id="setTitle" style="visibility: hidden">Please set a title. </span>
+      <span id="setCategory" style="visibility: hidden"> Please set a category.</span>
     </form>
 
     <!-- DESCRIPTION -->
