--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post-feed.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post-feed.component.html
@@ -37,7 +37,7 @@
     <div> <mat-chip-list><mat-chip>{{post.tags}}</mat-chip></mat-chip-list><br><br><br><br><br><br><br>
           {{post.title}} <span style="display: inline-block;">&nbsp;</span>
 
-        <a [routerLink]="['post', post.postId]"> Preview </a><br><br>
+        <a [routerLink]="['post', post.postId]"> View </a><br><br>
     <mat-icon>thumb_up</mat-icon>{{post.upvotes}}<span style="margin-left: 20px"></span>
     <mat-icon>thumb_down</mat-icon> {{post.downvotes}}
     <!-- </mat-card> -->
