--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post-feed.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post-feed.component.html
@@ -27,9 +27,23 @@
     <mat-option value="downvotes">Downvotes</mat-option>
     <mat-option value="tags">Tags</mat-option>
     <mat-option value="total">Total Votes</mat-option>
-
   </mat-select>
 </mat-form-field>
+
+<mat-form-field appearance="fill">
+  <mat-label>Category:</mat-label>
+  <mat-select [(ngModel)]="sortBy"(ngModelChange)="sortPosts()">
+    <mat-option value="title">Title</mat-option>
+    <mat-option value="id">ID</mat-option>
+    <mat-option value="recent">most recent</mat-option>
+    <mat-option value="oldest">oldest</mat-option>
+    <mat-option value="upvotes">Upvotes</mat-option>
+    <mat-option value="downvotes">Downvotes</mat-option>
+    <mat-option value="tags">Tags</mat-option>
+    <mat-option value="total">Total Votes</mat-option>
+  </mat-select>
+</mat-form-field>
+
 <mat-grid-list cols="2" rowHeight="2:1">
   <mat-grid-tile *ngFor="let post of postList">
 
