--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post-feed.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post-feed.component.html
@@ -32,20 +32,20 @@
 
 <mat-form-field appearance="fill">
   <mat-label>Category:</mat-label>
-  <mat-select [(ngModel)]="sortBy"(ngModelChange)="sortPosts()">
-    <mat-option value="title">Title</mat-option>
-    <mat-option value="id">ID</mat-option>
-    <mat-option value="recent">most recent</mat-option>
-    <mat-option value="oldest">oldest</mat-option>
-    <mat-option value="upvotes">Upvotes</mat-option>
-    <mat-option value="downvotes">Downvotes</mat-option>
-    <mat-option value="tags">Tags</mat-option>
-    <mat-option value="total">Total Votes</mat-option>
+  <mat-select [(ngModel)]="selectedCategory" (ngModelChange)="selectPosts()">
+    <mat-option value="restaurant">Restaurant</mat-option>
+    <mat-option value="coffeeshop">Coffeeshop</mat-option>
+    <mat-option value="shopping">Shopping</mat-option>
+    <mat-option value="sightseeing">Sightseeing</mat-option>
+    <mat-option value="museum">Museum</mat-option>
+    <mat-option value="university">University</mat-option>
+    <mat-option value="bern">Bern</mat-option>
+    <mat-option value="all">Show All</mat-option>
   </mat-select>
 </mat-form-field>
 
 <mat-grid-list cols="2" rowHeight="2:1">
-  <mat-grid-tile *ngFor="let post of postList">
+  <mat-grid-tile *ngFor="let post of selectedPosts">
 
     <!-- <mat-card> -->
     <div> <mat-chip-list><mat-chip>{{post.tags}}</mat-chip></mat-chip-list><br><br><br><br><br><br><br>
