implemented showing downvoted and commented posts in profile

--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/profile/profile.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/profile/profile.component.html
@@ -46,7 +46,7 @@
   <mat-tab-group>
     <mat-tab label="My Posts"><app-my-posts></app-my-posts></mat-tab>
     <mat-tab label="Upvoted"><app-upvoted-posts></app-upvoted-posts></mat-tab>
-    <mat-tab label="Downvoted"> Content </mat-tab>
-    <mat-tab label="Commented"> Content </mat-tab>
+    <mat-tab label="Downvoted"><app-downvoted-posts></app-downvoted-posts></mat-tab>
+    <mat-tab label="Commented"><app-commented-posts></app-commented-posts></mat-tab>
   </mat-tab-group>
 </mat-card>
