comments can now be deleted by their creators and by admins

--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post/comment/comment.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post/comment/comment.component.html
@@ -1,1 +1,2 @@
 <p>{{comment.description}}</p>
+<div *ngIf="user?.userId === comment.userId || user?.isAdmin"><button mat-flat-button color="warn" (click)="deleteComment()">delete comment</button></div>
