--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post/post.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post/post.component.html
@@ -10,17 +10,19 @@
     <mat-card-content>
         <div [innerHTML]="post.description"></div>
     </mat-card-content>
-
-    <mat-card-actions>
-      <button mat-flat-button color="primary" (click)="votePost(1)" [disabled]="hasDownvoted">UPVOTES: {{post.upvotes}}</button>
-      <button mat-flat-button color="primary" (click)="votePost(-1)" [disabled]="hasUpvoted">DOWNVOTES: {{post.downvotes}}</button>
-      <span *ngIf="user?.userId === post.userId || user?.isAdmin">
-        <button  mat-flat-button color="primary" (click)="editMode = true">EDIT</button>
-        <a routerLink="/home"> <button mat-flat-button color="warn" (click)="deletePost(post)">delete post</button></a>
-      </span>
-      <button mat-flat-button color="primary" (click)="createComment()">CREATE COMMENT</button><br><br>
-      <input matInput type="text" placeholder="Comment" name="Comment" [(ngModel)]="newCommentDescription">
-    </mat-card-actions>
+    <div *ngIf="loggedIn">
+      <mat-card-actions>
+        <button mat-flat-button color="primary" (click)="votePost(1)" [disabled]="hasDownvoted">UPVOTES: {{post.upvotes}}</button>
+        <button mat-flat-button color="primary" (click)="votePost(-1)" [disabled]="hasUpvoted">DOWNVOTES: {{post.downvotes}}</button>
+        <span *ngIf="user?.userId === post.userId || user?.isAdmin">
+          <button  mat-flat-button color="primary" (click)="editMode = true">EDIT</button>
+          <a routerLink="/home"> <button mat-flat-button color="warn" (click)="deletePost(post)">delete post</button></a>
+        </span>
+        <button mat-flat-button color="primary" (click)="createComment()">CREATE COMMENT</button><br><br>
+        <input matInput type="text" placeholder="Comment" name="Comment" [(ngModel)]="newCommentDescription">
+      </mat-card-actions>
+    </div>
+    
   </mat-card>
 </div>
 
