added product and fan shop component

--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/app.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/app.component.html
@@ -1,7 +1,7 @@
 
 <mat-toolbar color="primary">
   <mat-toolbar-row>
-    <mat-icon><a routerLink="/home">home</a></mat-icon> <span class="example-spacer"></span> <a routerLink="/login">Login</a> <span class="example-spacer"> </span> <a routerLink="/register" *ngIf="!loggedIn">Register </a><mat-icon *ngIf="loggedIn"><a routerLink="/profile">face</a></mat-icon>
+    <mat-icon><a routerLink="/home">home</a></mat-icon> <span class="example-spacer"></span> <a routerLink="/fan-shop">Fan-Shop</a><span class="example-spacer"></span><a routerLink="/login">Login</a> <span class="example-spacer"> </span> <a routerLink="/register" *ngIf="!loggedIn">Register </a><mat-icon *ngIf="loggedIn"><a routerLink="/profile">face</a></mat-icon>
   </mat-toolbar-row>
 </mat-toolbar>
 
