--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/todo-list/todo-item/todo-item.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/todo-list/todo-item/todo-item.component.html
@@ -1,10 +1,10 @@
-<!-- Input field with item name -->
-<mat-form-field>
-  <input matInput placeholder="Item Name" [(ngModel)]="todoItem.name" name="name" (ngModelChange)="updateItem()">
-</mat-form-field>
+<!--&lt;!&ndash; Input field with item name &ndash;&gt;-->
+<!--<mat-form-field>-->
+<!--  <input matInput placeholder="Item Name" [(ngModel)]="todoItem.name" name="name" (ngModelChange)="updateItem()">-->
+<!--</mat-form-field>-->
 
-<!-- Checkbox for item status -->
-<mat-checkbox [(ngModel)]="todoItem.done" (ngModelChange)="updateItem()">Done</mat-checkbox>
+<!--&lt;!&ndash; Checkbox for item status &ndash;&gt;-->
+<!--<mat-checkbox [(ngModel)]="todoItem.done" (ngModelChange)="updateItem()">Done</mat-checkbox>-->
 
-<!-- Button to delete item -->
-<button mat-flat-button color="warn" (click)="deleteItem()">Delete Item</button>
+<!--&lt;!&ndash; Button to delete item &ndash;&gt;-->
+<!--<button mat-flat-button color="warn" (click)="deleteItem()">Delete Item</button>-->
