--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post/post.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post/post.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!editMode">
+<div *ngIf="!preview"><div *ngIf="!editMode">
   <mat-card>
     <mat-card-header>
       <div mat-card-avatar></div>
@@ -71,4 +71,13 @@
     <button *ngIf="!existsInBackend" (click)="createPost()">Create</button>
   </div>
 
-</div>
+</div></div>
+<div *ngIf="preview"><!-- <mat-card> -->
+  <div> <mat-chip-list><mat-chip>{{post.tags}}</mat-chip></mat-chip-list><br><br><br><br><br><br><br>
+    {{post.title}} <span style="display: inline-block;">&nbsp;</span>
+
+    <a [routerLink]="['post', post.postId]"> View </a><br><br>
+    <mat-icon>thumb_up</mat-icon>{{post.upvotes}}<span style="margin-left: 20px"></span>
+    <mat-icon>thumb_down</mat-icon> {{post.downvotes}}
+    <!-- </mat-card> -->
+  </div></div>
