--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post/post.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post/post.component.html
@@ -72,12 +72,14 @@
   </div>
 
 </div></div>
+
+
 <div *ngIf="preview"><!-- <mat-card> -->
   <div> <mat-chip-list><mat-chip>{{post.tags}}</mat-chip></mat-chip-list><br><br><br><br><br><br><br>
     {{post.title}} <span style="display: inline-block;">&nbsp;</span>
 
     <a [routerLink]="['post', post.postId]"> View </a><br><br>
-    <mat-icon>thumb_up</mat-icon>{{post.upvotes}}<span style="margin-left: 20px"></span>
-    <mat-icon>thumb_down</mat-icon> {{post.downvotes}}
+    <button (click)="votePost(1)" [disabled]="hasDownvoted"><mat-icon>thumb_up</mat-icon></button>{{post.upvotes}}<span style="margin-left: 20px"></span>
+    <button (click)="votePost(-1)" [disabled]="hasUpvoted"><mat-icon>thumb_down</mat-icon></button> {{post.downvotes}}
     <!-- </mat-card> -->
   </div></div>
