added frontend part of image uploading

--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post/post.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post/post.component.html
@@ -6,9 +6,9 @@
       <mat-card-subtitle>{{post.tags}}</mat-card-subtitle>
       <mat-card-subtitle>Created At: {{createdAtString}} by {{authorName}}</mat-card-subtitle>
     </mat-card-header>
-    <!-- <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo in Post"> -->
     <mat-card-content>
         <div [innerHTML]="post.description"></div>
+        <div id="image"></div> 
     </mat-card-content>
 
     <mat-card-actions>
@@ -45,6 +45,8 @@
         <input matInput #message maxlength="256" [(ngModel)]="post.title" [ngModelOptions]="{standalone: true}">
         <mat-hint align="end">{{message.value.length}} / 256</mat-hint>
       </mat-form-field><mat-form-field appearance="fill">
+
+      <!-- CATEGORY -->
       <mat-label>Category:</mat-label>
       <mat-select [(ngModel)]="selectCategory"(ngModelChange)="findCategory()"[ngModelOptions]="{standalone: true}" >
         <mat-option value="restaurant">Restaurant</mat-option>
@@ -54,10 +56,26 @@
         <mat-option value="shopping">Shopping</mat-option>
         <mat-option value="museum">Museum</mat-option>
       </mat-select>
-
     </mat-form-field><span id="setTitle" style="visibility: hidden">Please set a title. </span>
       <span id="setCategory" style="visibility: hidden"> Please set a category.</span>
+
+    <!-- UPLOAD IMAGE -->
+    <input type="file" class="file-input" multiple accept="image/*"
+       (change)="onFileSelected($event)" #fileUpload>
+
+    <div class="file-upload">
+
+      {{fileName || "No Images uploaded yet."}}
+
+        <button mat-mini-fab color="primary" class="upload-btn"
+          (click)="fileUpload.click()">
+            <mat-icon>attach_file</mat-icon>
+        </button>
+    </div>
+    
     </form>
+
+    
 
     <!-- DESCRIPTION -->
     <br><br>
@@ -66,6 +84,8 @@
     <p class="html">
       HTML Output:  {{ post.description }}
     </p>
+
+    <span id="image"></span>
 
     <button *ngIf="existsInBackend" (click)="save()">Save</button>
     <button *ngIf="!existsInBackend" (click)="createPost()">Create</button>
