implemented correct routing order for product ordering process

--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/product/product.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/product/product.component.html
@@ -1,5 +1,8 @@
-<div *ngIf="preview"><!-- <mat-card> -->
-    {{post.title}} <span style="display: inline-block;">&nbsp;</span>
-    <a [routerLink]="['post', post.postId]"> View </a><br><br>
-    <!-- </mat-card> -->
-  </div></div>
+<div *ngIf="preview">
+    {{product.title}} <span style="display: inline-block;"></span>
+    <a [routerLink]="['product', product.productId]"> View </a><br><br>
+</div>
+
+<div *ngIf="!preview">
+  <button [routerLink]="['order']">buy</button>
+</div>
