--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/order-form/order-form.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/order-form/order-form.component.html
@@ -1,3 +1,3 @@
 <p>
-  <button (click)="createOrder()"> Confirm Order </button>
+  <button (click)="createOrder()" [routerLink]="['fan-shop']"> Confirm Order </button>
 </p>
