--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/profile/profile.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/profile/profile.component.html
@@ -48,5 +48,9 @@
     <mat-tab label="Upvoted"><app-post-feed [feedType]="'upvoted'"></app-post-feed></mat-tab>
     <mat-tab label="Downvoted"><app-post-feed [feedType]="'downvoted'"></app-post-feed></mat-tab>
     <mat-tab label="Commented"><app-post-feed [feedType]="'commented'"></app-post-feed></mat-tab>
+    <mat-tab label="My Orders"><div *ngFor="let order of myOrders">
+      <app-order [order]="order"></app-order>
+    </div>
+    </mat-tab>
   </mat-tab-group>
 </mat-card>
