sorting products by price

--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/fan-shop.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/fan-shop.component.html
@@ -4,6 +4,7 @@
     <mat-option value="title">Title</mat-option>
     <mat-option value="id">ID</mat-option>
     <mat-option value="tags">Tags</mat-option>
+    <mat-option value="price">Price</mat-option>
   </mat-select>
 </mat-form-field>
 
