--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/product/product.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/product/product.component.html
@@ -11,6 +11,7 @@
       <mat-card-subtitle>{{product.tag}}</mat-card-subtitle>
       <mat-card-subtitle>{{product.price}}</mat-card-subtitle>
     </mat-card-header>
+    <button [routerLink]="['order']">buy</button>
   </mat-card>
 </div>
 </div>
