updated order.model so that a fan can let a product be shipped to a different address than its own

--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/order-form/order-form.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/order-form/order-form.component.html
@@ -15,7 +15,7 @@
   </mat-form-field>
   <br>
   <mat-form-field>
-    <input matInput type="text" placeholder="zip code" name="zip code" [(ngModel)]="orderZip">
+    <input matInput type="text" placeholder="zip code" name="zip code" [(ngModel)]="orderZipCode">
   </mat-form-field>
   <mat-form-field>
     <input matInput type="text" placeholder="city" name="city" [(ngModel)]="orderCity">
