--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/order/order.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/order/order.component.html
@@ -1,1 +1,6 @@
-<p>order works!</p>
+<mat-card>
+  <mat-card-header>
+    <div mat-card-avatar></div>
+    <mat-card-subtitle>{{order.status}}</mat-card-subtitle>
+  </mat-card-header>
+</mat-card>
