not working fileupload commit

--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post/post.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post/post.component.html
@@ -63,7 +63,7 @@
     <input type="file" class="file-input" multiple accept="image/*"
        (change)="onFileSelected($event)" #fileUpload>
 
-    <div class="file-upload">
+    <div class="file-upload" action="image" enctype="multipart/form-data" method="post">
       <button mat-mini-fab color="primary" class="upload-btn"
         (click)="fileUpload.click()">
           <mat-icon>attach_file</mat-icon>
