Shipping address must not be empty when ordering a product

--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/order-form/order-form.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/order-form/order-form.component.html
@@ -28,6 +28,8 @@
 
 </mat-card>
 
+<span id="emptyFields" style="visibility: hidden"> Please fill out all the address details. </span>
+
 <p>
   <button (click)="createOrder()" [routerLink]="['fan-shop']"> Confirm Order </button>
 </p>
