display status, product and shipping address in order component

--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/fan-shop.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/fan-shop.component.html
@@ -23,8 +23,7 @@
 
 <mat-grid-list cols="2" rowHeight="2:1">
   <mat-grid-tile *ngFor="let product of selectedProducts">
-    <app-product [product]="product"
-                 [preview]="true"
+    <app-product [preview]="true"
                  [productId]="product.productId"></app-product>
   </mat-grid-tile>
 </mat-grid-list>
