--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/product/product.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/product/product.component.html
@@ -1,6 +1,8 @@
 <div *ngIf="preview">
+  <div>
     {{product.title}} <span style="display: inline-block;"></span>
     <a [routerLink]="['product', product.productId]"> View Product Details</a><br><br>
+  </div>
 </div>
 
 <div *ngIf="!preview"><div *ngIf="!editMode">
