save admin id when order is shipped

--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/order/order.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/order/order.component.html
@@ -13,6 +13,10 @@
     </mat-card-content>
     <mat-card-actions>
       <button mat-flat-button color="warn" (click)="cancelOrder()">CANCEL</button>
-      <button *ngIf="user?.isAdmin" mat-flat-button color="primary" (click)="shipOrder()">SHIP</button></mat-card-actions>
+      <button *ngIf="user?.isAdmin" mat-flat-button color="primary" (click)="shipOrder()">SHIP</button>
+    </mat-card-actions>
+    <mat-card-footer *ngIf="user?.isAdmin">
+      Ordered by: {{order.userId}} | Shipped by: {{order.adminId}} <br><br>
+    </mat-card-footer>
 
 </mat-card>
