--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/product/product.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/product/product.component.html
@@ -1,11 +1,26 @@
-<div *ngIf="preview">
+<!--<div *ngIf="preview">
   <div>
     {{product.title}} <span style="display: inline-block;"></span>
     <a [routerLink]="['product', product.productId]"> View Product Details</a><br><br>
   </div>
-</div>
+</div>-->
 
-<div *ngIf="!preview"><div *ngIf="!editMode">
+
+<div *ngIf="preview"><!-- <mat-card> -->
+  <div> <mat-chip-list><mat-chip>{{product.tag}}</mat-chip></mat-chip-list><br><br><br><br><br><br><br>
+    {{product.title}} <span style="display: inline-block;">&nbsp;</span>
+    <a [routerLink]="['product', product.productId]"> View Product Details</a><br><br>
+  </div></div>
+
+
+
+
+
+
+
+
+
+<!--<div *ngIf="!preview"><div *ngIf="!editMode">
   <mat-card>
     <mat-card-header>
       <div mat-card-avatar></div>
@@ -16,4 +31,66 @@
     <button (click) = "checkLoggedIn()">Buy now</button >
   </mat-card>
 </div>
+</div>-->
+
+
+
+<div *ngIf="!preview"><div *ngIf="!editMode">
+  <mat-card>
+    <mat-card-header>
+      <div mat-card-avatar></div>
+      <mat-card-title>{{product.title}}</mat-card-title>
+      <mat-card-subtitle>{{product.tag}}</mat-card-subtitle>
+      <mat-card-subtitle>Price: {{product.price}} CHF </mat-card-subtitle>
+    </mat-card-header>
+   <mat-card-content>
+      <div [innerHTML]="product.description"></div>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-flat-button color="primary" (click) = "checkLoggedIn()">Buy now</button >
+      <span *ngIf="user?.isAdmin">
+        <button  mat-flat-button color="primary" (click)="editMode = true">Edit Product</button>
+        <a routerLink="/home"> <button mat-flat-button color="warn" (click)="deleteProduct(product)">Delete Product</button></a>
+      </span>
+    </mat-card-actions>
+  </mat-card>
 </div>
+
+  <div *ngIf="editMode">
+
+    <div class="container">
+
+      <!-- TITLE -->
+      <form class="title-form">
+        <mat-form-field appearance="fill">
+          <mat-label>Title</mat-label>
+          <input matInput #message maxlength="256" [(ngModel)]="product.title" [ngModelOptions]="{standalone: true}">
+          <mat-hint align="end">{{message.value.length}} / 256</mat-hint>
+        </mat-form-field><mat-form-field appearance="fill">
+        <mat-label>Category:</mat-label>
+        <mat-select [(ngModel)]="selectCategory"(ngModelChange)="findCategory()"[ngModelOptions]="{standalone: true}" >
+          <mat-option value="restaurant">Restaurant</mat-option>
+          <mat-option value="university">University</mat-option>
+          <mat-option value="coffeeshop">Coffeeshop</mat-option>
+          <mat-option value="sightseeing">Sightseeing</mat-option>
+          <mat-option value="shopping">Shopping</mat-option>
+          <mat-option value="museum">Museum</mat-option>
+        </mat-select>
+
+      </mat-form-field><span id="setTitle" style="visibility: hidden">Please set a title. </span>
+        <span id="setCategory" style="visibility: hidden"> Please set a category.</span>
+      </form>
+
+      <!-- DESCRIPTION -->
+      <br><br>
+      <angular-editor id="editor1" [(ngModel)]="product.description" [config]="config1" (ngModelChange)="onChange($event)"
+                      (blur)="onBlur($event)"></angular-editor>
+      <p class="html">
+        HTML Output:  {{ product.description }}
+      </p>
+
+      <button *ngIf="existsInBackend" (click)="save()">Save</button>
+      <button *ngIf="!existsInBackend" (click)="createProduct()">Create</button>
+    </div>
+
+  </div></div>
