--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/fan-shop.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/fan-shop.component.html
@@ -1,3 +1,10 @@
+<mat-card>
+  <p *ngIf="user?.isAdmin">
+  <a routerLink="/fan-shop/product/-1"><button>Create Product</button></a>
+</p>
+</mat-card>
+
+
 <mat-form-field appearance="fill">
   <mat-label>Sort by:</mat-label>
   <mat-select [(ngModel)]="sortBy"(ngModelChange)="sortProducts()">
