fixed order shipped/cancelled status after refreshing page

--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/order/order.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/order/order.component.html
@@ -13,7 +13,7 @@
     </mat-card-content>
     <mat-card-actions>
       <button mat-flat-button color="warn" (click)="cancelOrder()">CANCEL</button>
-      <button *ngIf="user?.isAdmin" mat-flat-button color="primary" (click)="shipOrder()">SHIP</button>
+      <button *ngIf="user?.isAdmin" mat-flat-button color="primary" (click)="shipOrder()"[disabled]="isShipped">SHIP</button>
     </mat-card-actions>
     <mat-card-footer *ngIf="user?.isAdmin">
       Ordered by: {{order.userId}} | Shipped by: {{order.adminId}} <br><br>
