disable cancel/ship order buttons if already shipped or cancelled

--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/order/order.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/order/order.component.html
@@ -12,8 +12,8 @@
       </mat-card>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-flat-button color="warn" (click)="cancelOrder()">CANCEL</button>
-      <button *ngIf="user?.isAdmin" mat-flat-button color="primary" (click)="shipOrder()"[disabled]="isShipped">SHIP</button>
+      <button mat-flat-button color="warn" (click)="cancelOrder()"[disabled]="isShipped || isCancelled">CANCEL</button>
+      <button *ngIf="user?.isAdmin" mat-flat-button color="primary" (click)="shipOrder()"[disabled]="isShipped || isCancelled">SHIP</button>
     </mat-card-actions>
     <mat-card-footer *ngIf="user?.isAdmin">
       Ordered by: {{order.userId}} | Shipped by: {{order.adminId}} <br><br>
