--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/order-form/order-form.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/order-form/order-form.component.html
@@ -1,36 +1,45 @@
-<mat-card>
-  <h3>Shipping Details</h3>
-  <mat-form-field>
-    <input matInput type="text" placeholder="first name" name="first name" [(ngModel)]="orderFirstName">
-  </mat-form-field>
-  <mat-form-field>
-    <input matInput type="text" placeholder="last name" name="last name" [(ngModel)]="orderLastName">
-  </mat-form-field>
-  <br>
-  <mat-form-field>
-    <input matInput type="text" placeholder="street" name="street" [(ngModel)]="orderStreet">
-  </mat-form-field>
-  <mat-form-field>
-    <input matInput type="text" placeholder="house number" name="house number" [(ngModel)]="orderHouseNr">
-  </mat-form-field>
-  <br>
-  <mat-form-field>
-    <input matInput type="text" placeholder="zip code" name="zip code" [(ngModel)]="orderZipCode">
-  </mat-form-field>
-  <mat-form-field>
-    <input matInput type="text" placeholder="city" name="city" [(ngModel)]="orderCity">
-  </mat-form-field>
-  <br>
-  <mat-form-field>
-    <input matInput type="text" placeholder="phone number" name="phone number" [(ngModel)]="orderPhoneNr">
-  </mat-form-field>
-  <br>
+<div *ngIf=!redirecting>
+  <mat-card>
+    <h3>Shipping Details</h3>
+    <mat-form-field>
+      <input matInput type="text" placeholder="first name" name="first name" [(ngModel)]="orderFirstName">
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput type="text" placeholder="last name" name="last name" [(ngModel)]="orderLastName">
+    </mat-form-field>
+    <br>
+    <mat-form-field>
+      <input matInput type="text" placeholder="street" name="street" [(ngModel)]="orderStreet">
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput type="text" placeholder="house number" name="house number" [(ngModel)]="orderHouseNr">
+    </mat-form-field>
+    <br>
+    <mat-form-field>
+      <input matInput type="text" placeholder="zip code" name="zip code" [(ngModel)]="orderZipCode">
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput type="text" placeholder="city" name="city" [(ngModel)]="orderCity">
+    </mat-form-field>
+    <br>
+    <mat-form-field>
+      <input matInput type="text" placeholder="phone number" name="phone number" [(ngModel)]="orderPhoneNr">
+    </mat-form-field>
+    <br>
 
-</mat-card>
+  </mat-card>
 
-<span id="emptyFields" style="visibility: hidden"> Please fill out all the address details. </span>
+  <span id="emptyFields" style="visibility: hidden"> Please fill out all the address details. </span>
 
-<p>
-  <button (click)="createOrder()" [routerLink]="['fan-shop']"> Confirm Order </button>
-</p>
+  <p>
+    <button (click)="createOrder()" [routerLink]="['fan-shop']"> Confirm Order </button>
+  </p>
+
+  <button (click)="postAPI()">Make api call to post</button>
+
+</div>
+
+<div *ngIf="redirecting">
+  <h1>redirecting to secure payment site...</h1>
+</div>
 
